--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html{
     font-size: 62.5%;
 }
 #home{
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background: rgb(1, 36, 117);
     
